--- a/startup_namer/pubspec.yaml
+++ b/startup_namer/pubspec.yaml
@@ -65,6 +65,8 @@ flutter:
     - assets/maze.png
     - assets/snake.png
     - assets/minesweeper.png
+    - assets/morse.png
+    - assets/wires.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
