--- a/startup_namer/pubspec.yaml
+++ b/startup_namer/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - assets/minesweeper.png
     - assets/morse.png
     - assets/wires.png
+    - assets/morseTranslater.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
