fixed timer issue that turned up LED ring works for maze

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
 	"cmake.ignoreCMakeListsMissing": true,
 	"files.associations": {
-		"xlocale": "cpp"
+		"xlocale": "cpp",
+		"limits": "cpp",
+		"utility": "cpp"
 	}
 }
