--- a/startup_namer/pubspec.yaml
+++ b/startup_namer/pubspec.yaml
@@ -41,6 +41,15 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
+  flutter_launcher_icons: ^0.13.1
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_logo.png" 
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -68,6 +77,7 @@ flutter:
     - assets/morse.png
     - assets/wires.png
     - assets/morseTranslater.png
+    - assets/symbol.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
